--- a/public/index.html
+++ b/public/index.html
@@ -38,11 +38,11 @@
         <div class="span12 form-inline">
                 <div class="form-group col-lg-7">
                     <label class="sr-only" for="scrapeUrl"></label>
-                    <input class="form-control input-lg" id="scrapeUrl" placeholder="Contact page URL">
+                    <input class="form-control input-lg" id="scrapeUrl" placeholder="Contact page URL" value="http://alumni.brown.edu/about/staff/index.html">
                 </div>
                 <div class="form-group col-lg-3">
                     <label class="sr-only" for="xpath"></label>
-                    <input class="form-control input-lg" id="xpath" placeholder="XPath">
+                    <input class="form-control input-lg" id="xpath" placeholder="XPath" value="//span[2]/dl/dt/a/text()">
                 </div>
                     <button class="btn btn-success btn-lg" id="scrapeButton">Scrape!</button>
         </div>
@@ -64,8 +64,8 @@
 
 <script type="text/template" id="row_template">
     <tr>
-        <td>1</td>
-        <td>2</td>
+        <td></td>
+        <td><%= name %></td>
     </tr>
 </script>
 
